--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
 					<mainClass>org.nibor.git_merge_repos.Main</mainClass>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
