Set version of maven-compiler-plugin
Also set minimum Maven version to 2.0.9 which was necessary in order to specify latest version of maven-compiler-plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	<prerequisites>
+		<maven>2.0.9</maven>
+	</prerequisites>
 	<build>
 		<plugins>
 			<plugin>
@@ -19,6 +22,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
