--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ buildscript {
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
-mainClassName = 'com.ameriod.git.merger.HelloWorldKt'
+mainClassName = 'com.ameriod.git.merger.MainKt'
 
 defaultTasks 'run'
 
