--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 buildscript {
     ext.kotlin_version = '1.1.51'
-    ext.moshi_version = '1.5.0'
     repositories {
         mavenCentral()
     }
@@ -23,8 +22,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile "org.eclipse.jgit:org.eclipse.jgit:2.2.0.201212191850-r"
-    compile "com.squareup.moshi:moshi:$moshi_version"
-    compile "com.squareup.moshi:moshi-kotlin:$moshi_version"
+    compile "com.google.code.gson:gson:2.8.2"
     testCompile 'junit:junit:4.11'
     testCompile "org.jetbrains.kotlin:kotlin-test-junit:$kotlin_version"
 }
